fix: Button in center flexible column layout on IE11

--- a/src/flexible-column-layout.scss
+++ b/src/flexible-column-layout.scss
@@ -56,6 +56,7 @@ $block: #{$fd-namespace}-flexible-column-layout;
     width: $fd-toggle-button-width;
     min-width: $fd-toggle-button-width;
     justify-content: center;
+    padding: 0;
 
     @include fd-absolute-center();
   }
